--- a/HomesideHeroes/HomesideHeroes.csproj
+++ b/HomesideHeroes/HomesideHeroes.csproj
@@ -44,6 +44,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FileHelpers, Version=3.1.5.0, Culture=neutral, PublicKeyToken=3e0c08d59cc3d657, processorArchitecture=MSIL">
       <HintPath>..\packages\FileHelpers.3.1.5\lib\net45\FileHelpers.dll</HintPath>
       <Private>True</Private>
@@ -160,14 +164,25 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\Base\BaseApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PluralsightController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Base\BasePluralsightEntity.cs" />
+    <Compile Include="Models\Base\GenericFilterablePluralsightEntity.cs" />
+    <Compile Include="Models\Base\GenericPluralsightEntity.cs" />
+    <Compile Include="Models\PluralsightCourses.cs" />
+    <Compile Include="Models\PluralsightCourseUsage.cs" />
+    <Compile Include="Models\PluralsightCourseCompletion.cs" />
     <Compile Include="Models\PluralsightUsers.cs" />
+    <Compile Include="Models\Utils\Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Viewmodels\AutoMapper\AutoMapperConfig.cs" />
+    <Compile Include="Viewmodels\AutoMapper\Profiles\PluralsightUsersProfile.cs" />
+    <Compile Include="Viewmodels\PluralsightUsersDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
