Gross, but we at least have some magic happening

--- a/HomesideHeroes/Web.config
+++ b/HomesideHeroes/Web.config
@@ -9,6 +9,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Pluralsight -->
+    <add key="PluralsightPlanId" value="homeside-financial-e8c8a" />
+    <add key="PluralsightApiToken" value="72dff25d-a736-420c-b4ff-ebbb0d932533" />
+    <add key="PluralsightBaseUrl" value="https://app.pluralsight.com/plans/api/reports/v1/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
