--- a/HomesideHeroes/HomesideHeroes.csproj
+++ b/HomesideHeroes/HomesideHeroes.csproj
@@ -183,9 +183,12 @@
     <Compile Include="Models\Utils\Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Viewmodels\AutoMapper\AutoMapperConfig.cs" />
+    <Compile Include="Viewmodels\AutoMapper\Profiles\PluralsightCourseCompletionProfile.cs" />
     <Compile Include="Viewmodels\AutoMapper\Profiles\PluralsightCourseUsageProfile.cs" />
     <Compile Include="Viewmodels\AutoMapper\Profiles\PluralsightUsersProfile.cs" />
-    <Compile Include="Viewmodels\CourseUsageOverMonth.cs" />
+    <Compile Include="Viewmodels\CourseCompletionByYear.cs" />
+    <Compile Include="Viewmodels\CourseCompletionRecentlyCompleted.cs" />
+    <Compile Include="Viewmodels\CourseUsageByMonth.cs" />
     <Compile Include="Viewmodels\PluralsightUsersDto.cs" />
   </ItemGroup>
   <ItemGroup>
